--- a/lse_list/index.html
+++ b/lse_list/index.html
@@ -22,7 +22,7 @@
 <nav>
   <ul class='navbar'>
   	<li><a href='/'><img src='/static/img/vellum.png'/ id='logo'></a></li>
-    <li class='push'><a href="/about">About</a></li>
+    <li id='nav-item-right'><a href="/about">About</a></li>
     <!--<li><a href="#">Contact</a></li>-->
   </ul>
 </nav> 
