completed about page

--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
 <section class='index-container'>
 	<div id='slogan'>A list of books reviewed by academics</div>
 	<div class='link-container'>
-		<div><a href='/lse'>History and Economics</a>, from the LSE Review of Books</div>
-		<div><a href='/stem'>Science and Technology</a>, from <i>Science</i> and <i>Nature</i></div>
+		<div><a href='/lse'>History and Economics</a><br/>from the LSE Review of Books</div>
+		<br/>
+		<div><a href='/stem'>Science and Technology</a><br/>from <i>Science</i> and <i>Nature</i></div>
 	</div>
 </section>
 </main>
