--- a/about/index.html
+++ b/about/index.html
@@ -28,25 +28,24 @@
 </nav> 
 <main class='main-container'>
 <h1>About Vellum</h1>
-<p>Vellum is inspired by NPR's <a href="https://apps.npr.org/best-books/">Book Concierge</a> and Lithub's <a href="https://bookmarks.reviews/">review aggregator</a>. As it says on the tin, Vellum is an aggregated list of nonfiction books that have been reviewed by academics on the websites mentioned below.</p>
+<p>Vellum is inspired by NPR's <a href="https://apps.npr.org/best-books/">Book Concierge</a> and Lithub's <a href="https://bookmarks.reviews/">review aggregator</a>. As it says on the tin, Vellum is an aggregated list of nonfiction books that have been reviewed by academics on the websites mentioned below. You can view the list with or without the book covers, and filter it by keyword and year of publication (the books, not the reviews).</p>
 <h2>Why did you make this?</h2>
-<p>I love books, fiction or nonfiction. When looking for nonfiction on specialist topics written for the lay reader, I try my best to judge whether the book is factually sound before reading it. Some books make a huge splash before <a href="https://guzey.com/books/why-we-sleep/">their flaws are laid bare</a>—it takes an expert to uncover those flaws.</p>
-<p>There are two types of nonfiction reviews written by academics: those about books written by experts for experts, and those about books written by experts for non-experts. I'm mostly interested in the latter kind of reviews, which are published online by some big-name journals and universities. Digging through their gleefully paginated blogs isn't the most pleasant experience, however, which is why I made this attempt at a better interface. I find this list easier to browse and the filters, while not 100% there*, help to narrow down the options. Note that the reviews themselves aren't displayed at all to avoid blatantly violating the journals' terms of service; instead, I've included links to the original reviews.</p>
-<p>Besides, this was a fun excuse to play with</p>
-<p>*<em>The keyword filters are generated from the source HTML and are therefore a little wonky. At some point I hope to clean and aggregate them into broader categories.</em></p>
+<p>I love books, fiction or nonfiction. When looking for nonfiction on specialist topics written for the lay reader (in other words, popular {science | humanities} books), I try my best to judge whether the book is factually sound before reading it. Some books make a huge splash before <a href="https://guzey.com/books/why-we-sleep/">their flaws are laid bare</a>—it takes an expert to uncover those flaws. Thankfully, some big-name journals and universities publish reviews of books like these. Digging through their gleefully paginated blogs isn't the most pleasant experience, however, which is why I made this attempt at a better interface. I find this list easier to browse and the filters, while not 100% there*, help to narrow down the options. Note that the reviews themselves aren't displayed at all to avoid blatantly violating the journals' terms of service; instead, I've included links to the original reviews.</p>
+<p>Besides, this was a fun excuse to play with Python and Javascript, the second of which I haven't really touched since the heyday of jQuery.</p>
+<p>*<em>The keyword filters are generated from the source HTML and are therefore a little wonky and overly granular. At some point I hope to clean and aggregate them into broader categories.</em></p>
 <h2>Source of reviews</h2>
 <ul>
 <li><a href="https://www.nature.com/nature/articles?type=book-review"><em>Nature</em></a>*</li>
 <li><a href="https://blogs.sciencemag.org/books/category/book/"><em>Science</em></a></li>
 <li><a href="https://blogs.lse.ac.uk/lsereviewofbooks/"><em>LSE Review of Books</em></a></li>
 </ul>
-<p>*<em>Most recent 100 reviews, as earlier reviews appear to be comprised mainly of very niche texts and edited collections.</em></p>
+<p>*<em>100 most recent reviews, as earlier reviews appear to be comprised mainly of very niche texts and edited collections.</em></p>
 <h2>Disclaimer</h2>
 <p>This is a personal, non-commercial project unaffiliated with any of the institutions mentioned on this site. All rights are reserved to the original owners. No source material is displayed on this site.</p>
 <h1>About this website</h1>
-<p>I'm not a developer of any kind, so please forgive any defects in styling/functionality/optimisation. This is a basic static site generated with <a href="11ty.dev/">11ty</a>. Apart from the <a href="https://apoorv.pro/lozad.js/">lozad</a> and <a href="https://isotope.metafizzy.co/">Isotope</a> Javascript libraries, everything else is (poorly written) vanilla HTML, CSS and JS. This project could definitely use a database but I bent over backwards to minimise backend requirements. Don't ask me why.</p>
-<p>I gathered the list of books with the help of my pet snake (ahem), whom I bribed with some <em>beautiful</em> soup and very humble <em>requests</em>. With JSON happily in hand, I queried the Google Books API for metadata, including the book descriptions and covers.</p>
-<p>The website is hosted on <a href="https://www.netlify.com/">Netlify</a> for a grand total of Ð0.</p>
+<p>I'm not a professional developer, so please forgive any defects in styling/functionality/optimisation. This is a basic static site generated with <a href="11ty.dev/">11ty</a>. Apart from the <a href="https://apoorv.pro/lozad.js/">lozad</a> and <a href="https://isotope.metafizzy.co/">Isotope</a> Javascript libraries, everything else is (rather mushy) vanilla HTML, CSS and JS.</p>
+<p>I gathered the list of books with the help of, uh, my pet snake Monty, whom I bribed with some <em>beautiful</em> soup and very humble <em>requests</em>. With JSON assembled and happily in hand, I queried the Google Books API for metadata, including the book descriptions and covers. I then fed the JSON files as data sources to 11ty.</p>
+<p>The website is hosted on <a href="https://pages.github.com/">Github pages</a> for a grand total of Ð0.</p>
 <h1>About me</h1>
 <p>I'm a medical student and I like messing about with computers. You can find other things I've made <a href="https://tachy.org">here</a>.</p>
 </main>
